# astroloji

./: .env.example  .gitignore  ASTROLOGY_FIXES_SUMMARY.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_REPORT.md  README.md  astro_aa_docs_bundle_markdown_files.md  backend.tar.xz  deploy.sh  docker-compose.yml
astroloji2/: .env.example  README.md  deploy.md  pyproject.toml
astroloji2/astroloji_ai_app/: requirements.txt
astroloji2/astroloji_ai_app-1/: README.md
astroloji2/src/astroloji_ai/: __init__.py
astroloji2/src/astroloji_ai/api/: main.py
astroloji2/src/astroloji_ai/config/: settings.py
astroloji2/tests/: test_api.py
backend/: .env.example  .gitkeep  Dockerfile  demo_fixes.py  init.sql  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  logging_setup.py  main.py  models.py  services.py
backend/app/api/: admin.py  alerts.py  auth.py  charts.py  horoscope.py  interpretations.py  metrics.py
backend/app/api/v1/: __init__.py  (+3 more)
backend/app/auth/: dependencies.py  models.py  security.py  service.py
backend/app/calculators/: __init__.py  almuten.py  antiscia.py  ephemeris.py  firdaria.py  fixed_stars.py  midpoints.py  profection.py  progressions.py  solar_arc.py  transits.py  zodiac_releasing.py
backend/app/evaluation/: __init__.py  benchmark_runner.py  cli.py  dashboard.py  metrics.py  metrics_util.py  observability.py  prometheus_bridge.py  run_rag_benchmark.py  test_suite.py
backend/app/horoscope/: __init__.py  service.py
backend/app/interpreters/: __init__.py  conflict_resolver.py  core.py  output_composer.py  scoring.py
backend/app/middleware/: observability.py  privacy.py
backend/app/ml/: __init__.py  horoscope_model.py
backend/app/pipelines/: __init__.py  cache.py  chart_builder.py  claim_alignment.py  degrade.py  mock_data.py  quality_control.py  rag_pipeline.py  sanitization.py
backend/app/prompts/: __init__.py  master_prompt.py  master_prompt.yaml
backend/app/rag/: __init__.py  citation.py  core.py  embeddings.py  kg_connector.py  planner.py  query_expansion.py  re_ranker.py  retriever.py  sql_connector.py
backend/app/schemas/: __init__.py  birth.py  chart.py  common.py  interpretation.py  rag.py
backend/app/security/: api_key.py
backend/app/tools/: semantic_cache_alignment.py
backend/scripts/: data_collection.py  eval_embeddings.py  ingest_corpus.py  ingest_mock_data.py  run_eval.py  run_eval_hybrid.py  train_horoscope_model.py  tune_router_thresholds.py
backend/tests/: test_go_no_go.py
backend/tests/test_api/: test_charts_api.py  test_rag_api.py
backend/tests/test_calculators/: __init__.py  test_almuten.py  test_antiscia.py  test_ephemeris.py  test_ephemeris_dst.py  test_firdaria.py  test_fixed_stars.py  test_profection.py  test_progressions.py  test_zodiac_releasing.py
backend/tests/test_evaluation/: test_metrics.py  test_observability.py  test_observability_simple.py  test_test_suite.py
backend/tests/test_integration/: test_chart_calculation.py
backend/tests/test_interpreters/: __init__.py  test_core.py  test_scoring.py
backend/tests/test_llm/: test_orchestrator.py
backend/tests/test_pipelines/: test_claim_alignment.py  test_degrade_policy.py  test_rag_pipeline_benchmark.py
backend/tests/test_rag/: test_core.py  test_embeddings.py  test_retrieval_metrics.py  test_retriever.py
(+48 files in other folders)
